<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android">
    
    <PreferenceCategory 
        android:title="Server Settings"
        android:key="pref_key_server_settings">
	    <EditTextPreference
	        android:key="pref_server"
	        android:title="@string/remote_server"
	        android:summary="@string/pref_server_summary"
	        android:dialogTitle="Enter Server IP Address"
	        android:defaultValue="@string/default_server_ip" />
	    <EditTextPreference
	        android:key="pref_server_port"
	        android:title="@string/remote_server_port"
	        android:summary="@string/pref_server_port_summary"
	        android:dialogTitle="Enter Server Port"
	        android:defaultValue="@string/default_server_port"
	        android:numeric="integer"
    		android:maxLength="4" />
	</PreferenceCategory>
    
</PreferenceScreen>